# vs2022_176_clang_tidy_bug_candidate

./: .clang-tidy  CMakeLists.txt  Readme.md
C1/: C1.cpp  C1.hpp  CMakeLists.txt
